--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
 	"configurations": [
 		{
 			"type": "java",
+			"name": "Dbj2Hash",
+			"request": "launch",
+			"mainClass": "com.misc.Dbj2Hash",
+			"projectName": "Java-Foundation_824d64eb"
+		},
+		{
+			"type": "java",
 			"name": "Pointing",
 			"request": "launch",
 			"mainClass": "com.misc.Pointing",
