--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
 	"typescript.inlayHints.propertyDeclarationTypes.enabled": true,
 	"typescript.inlayHints.variableTypes.enabled": true,
 	"java.debug.settings.onBuildFailureProceed": true,
-	"java.format.settings.url": ".vscode/eclipse-java-google-style.xml"
+	"java.format.settings.url": ".vscode/eclipse-java-google-style.xml",
+	"cSpell.words": ["curr"]
 }
