--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
 	"typescript.inlayHints.variableTypes.enabled": true,
 	"java.debug.settings.onBuildFailureProceed": true,
 	"java.format.settings.url": ".vscode/eclipse-java-google-style.xml",
-	"cSpell.words": ["curr"]
+	"cSpell.words": ["curr", "strs"]
 }
