--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
 	"configurations": [
 		{
 			"type": "java",
+			"name": "MyQueue",
+			"request": "launch",
+			"mainClass": "datastructure.MyQueue",
+			"projectName": "Java-Foundation_631fd9cd"
+		},
+		{
+			"type": "java",
 			"name": "test",
 			"request": "launch",
 			"mainClass": "CrackingTheCode.test",
