--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,27 @@
 	"configurations": [
 		{
 			"type": "java",
+			"name": "DLinkedList",
+			"request": "launch",
+			"mainClass": "datastructure.LinkedList.DLinkedList",
+			"projectName": "Java-Foundation_631fd9cd"
+		},
+		{
+			"type": "java",
+			"name": "BinarySearchTree",
+			"request": "launch",
+			"mainClass": "datastructure.Trees.BinarySearchTree",
+			"projectName": "Java-Foundation_631fd9cd"
+		},
+		{
+			"type": "java",
+			"name": "Main",
+			"request": "launch",
+			"mainClass": "datastructure.Trees.Main",
+			"projectName": "Java-Foundation_631fd9cd"
+		},
+		{
+			"type": "java",
 			"name": "Reverse",
 			"request": "launch",
 			"mainClass": "datastructure.Reverse",
