--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
 	"java.project.outputPath": "bin",
 	"java.project.referencedLibraries": ["lib/**/*.jar"],
 	"java.debug.settings.onBuildFailureProceed": true,
-	"cSpell.words": ["bson", "datastructure", "Linearithmetic", "linkedlist"]
+	"cSpell.words": ["allkeys", "bson", "datastructure", "Linearithmetic", "linkedlist"]
 }
